--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,9 @@
         <form action="/" method="post">
             <input type="submit" value="genAI">
         </form>
+        <form action="/SA" method="post">
+            <input type="submit" value="sentiment analysis">
+        </form>
         <form action="/" method="post">
             <input type="submit" value="Exit">
         </form>
