--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
     <h2>Wealth Management</h2>
-        <form action="/" method="post">
+        <form action="/GA" method="post">
             <input type="submit" value="genAI">
         </form>
         <form action="/SA" method="post">
