--- a/templates/main.html
+++ b/templates/main.html
@@ -13,6 +13,9 @@
         <form action="/SA" method="post">
             <input type="submit" value="sentiment analysis">
         </form>
+        <form action="/paynow" method="post">
+            <input type="submit" value="Transfer Money">
+        </form>
         <form action="/" method="post">
             <input type="submit" value="Exit">
         </form>
